--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,23 @@
 	<artifactId>approche-objet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	
+
 	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 	 <dependencies>
+		<!-- https://mvnrepository.com/artifact/org.beykery/neuroph -->
+		<dependency>
+		    <groupId>org.beykery</groupId>
+		    <artifactId>neuroph</artifactId>
+		    <version>2.92</version>
+		</dependency>	 
+	 
 	 	<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.6</version>
 		</dependency>
+		
+		
 	 </dependencies>
  	
 	<build>
