--- a/pom.xml
+++ b/pom.xml
@@ -5,38 +5,45 @@
 	<groupId>fr.diginamic</groupId>
 	<artifactId>approche-objet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 
 	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-	 <dependencies>
+	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.beykery/neuroph -->
 		<dependency>
-		    <groupId>org.beykery</groupId>
-		    <artifactId>neuroph</artifactId>
-		    <version>2.92</version>
-		</dependency>	 
-	 
-	 	<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>2.6</version>
+			<groupId>org.beykery</groupId>
+			<artifactId>neuroph</artifactId>
+			<version>2.92</version>
 		</dependency>
 
- 	  	<dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
- 		
+
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.18</version>
+		</dependency>
 		
-	 </dependencies>
- 	
+
+	</dependencies>
+
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
