--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>fr.diginamic</groupId>
 	<artifactId>approche-objet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 
 
 	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
@@ -14,6 +15,13 @@
 			<groupId>org.beykery</groupId>
 			<artifactId>neuroph</artifactId>
 			<version>2.92</version>
+			<exclusions>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+				</exclusion>
+			</exclusions>
+			
 		</dependency>
 
 		<dependency>
@@ -36,9 +44,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.18</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
 		</dependency>
 		
 
